changing swagger docs
